Fri Nov  9 14:31:51 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/compiler/Servant_Impl.cpp:

          BUGFIX: The CIAO executor was incorrect. I wonder if this has
          anything to do with a new version of CIAO?

Fri Nov  9 14:26:09 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/compiler/Servant_File.cpp:

          BUGFIX: Somehow the namespace generation was incomplete.

Fri Nov  9 14:08:49 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * cuts/iccm/arch/tao/compiler/Event_Traits.cpp:

          BUGFIX: The event traits did not have the correct scope of the
          TAO event types.

        * cuts/iccm/arch/tao/compiler/Stub_File.cpp:

          BUGFIX: The OBV events base types where not scoped correctly.

Fri Nov  9 13:24:31 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/ccm/ciao/CIAO_Traits.cpp:

          BUGFIX: iCCM base projects were not generated for IDL files
          that contained components.

Tue Nov  6 23:02:57 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>

        * ChangeLogs/ChangeLog-1_0_0:

          Tagging ChangeLog
