@@ -1,3 +1,11 @@
+Fri Nov  9 14:55:05 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
+
+        * cuts/iccm/compiler/Servant_File.cpp:
+        * cuts/iccm/compiler/Servant_Impl.cpp:
+
+          BUGFIX: Last fix related to generating code for components and
+          events within modules.
+
 Fri Nov  9 14:31:51 UTC 2012  James H. Hill  <hillj at cs dot iupui dot edu>
 
         * cuts/iccm/compiler/Servant_Impl.cpp:
